# aglpi

./: .gitignore  CHANGELOG.md  README.md  pyproject.toml
src/: core.py  main.py
src/handler/: json_processor.py
src/ui/: banner.py
