[project]
name = "aglpi"
version = "1.0.0"
authors = [{ name = "oppsec", email = "opps3c@gmail.com" }]
description = "Against GLPI"
readme = "README.md"
keywords = ["python3", "web", "glpi", "pentest"]

classifiers = [
    'Environment :: Console',
    'License :: OSI Approved :: BSD License',
    'Programming Language :: Python :: 3',
    'Topic :: Security',
]

dependencies = ["requests>=2.31.0", "rich>=13.5.3", "beautifulsoup4>=4.12.3"]

license = { file = "LICENSE" }

[project.urls]
Homepage = "https://github.com/oppsec/aglpi"
Issues = "https://github.com/oppsec/aglpi/issues"

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project.scripts]
aglpi = "main:menu"